// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails integration test should change the data after reload: task details data should change 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "label": "new-label",
        },
        "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "taskDetails": Object {
      "label": "new-label",
      "taskReload": true,
      "timeoutId": 4,
    },
  },
}
`;

exports[`TaskDetails integration test should change the data after reload: task details reload start without error 1`] = `
Array [
  Array [
    Object {
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "id": "test",
        "refetchTaskDetails": [Function],
        "timeoutId": 4,
      },
      "type": "FOREMAN_TASK_DETAILS_START_PULLING",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "label": "new-label",
      },
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_SUCCESS",
    },
  ],
]
`;

exports[`TaskDetails integration test should flow: initial state 1`] = `
Object {
  "taskDetails": Object {},
}
`;

exports[`TaskDetails integration test should flow: task details reload start with error 1`] = `
Array [
  Array [
    Object {
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "id": "test",
        "refetchTaskDetails": [Function],
        "timeoutId": 1,
      },
      "type": "FOREMAN_TASK_DETAILS_START_PULLING",
    },
  ],
  Array [
    Object {
      "payload": [TypeError: Cannot read property 'data' of undefined],
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_FAILURE",
    },
  ],
]
`;

exports[`TaskDetails integration test should flow: task details reload stop 1`] = `
Array [
  Array [
    Object {
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "id": "test",
        "refetchTaskDetails": [Function],
        "timeoutId": 1,
      },
      "type": "FOREMAN_TASK_DETAILS_START_PULLING",
    },
  ],
  Array [
    Object {
      "payload": [TypeError: Cannot read property 'data' of undefined],
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_FAILURE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "timeoutId": 1,
      },
      "type": "FOREMAN_TASK_DETAILS_STOP_PULLING",
    },
  ],
]
`;
